# uwr-mp

l1/: l1.ml
l10/fun/_build/: .db  .digest-db  log
l10/fun/src/: ast.ml  lexer.mll  main.ml
l10/imp-incr/_build/: .db  .digest-db  log
l10/imp-pure/_build/: .db  .digest-db  log
l10/imp-pure/src/: eval.ml
l10/imp-ref/_build/: .db  .digest-db  log
l10/z3/: example.imp
l10/z3/_build/: .db  .digest-db  log
l10/z3/src/: eval.ml
l10/z4/_build/: .db  .digest-db  log
l10/z4/src/: eval.ml
l11/exn_mc/_build/: .db  .digest-db  log
l11/z/_build/: .db  .digest-db  log
l11/z3/: example.exn
l11/z3/_build/: .db  .digest-db  log
l11/z3/src/: eval.ml
l11/z4/: example.exn
l11/z4/_build/: .db  .digest-db  log
l11/z4/src/: ast.ml  eval.ml  parser.mly
l12/match/_build/: .db  .digest-db  log
l12/z1/_build/: .db  .digest-db  log
l12/z23/: append.match  map.match  z3.match
l12/z23/_build/: .digest-db  log
l12/z5/_build/: .db  .digest-db  log
l12/z5/src/: eval.ml
l13/z1/: example3.exn
l13/z2/: example.match
l2/zad/: dune-project
l5/: z
l6/: z2
l6/z5/: dune-project
l7/: z1  z2
l7/z67/: dune-project
l9/z/: dune-project
p1/: dune-project  s.ml  solution.ml  solution1.ml  solution2.ml  solution3.ml  solution4.ml  solution5.ml  solution6.ml
p1/_build/: .db  .digest-db  log
p2/: dune-project
p2/_build/: .db  .digest-db  log
p2/test/: dune
p3/: sol1.ml  sol2.ml  sol3xD.ml  test0  test1  test2  test3  test4  test5  test6  test7  test8
p3/_build/: .db  .digest-db  log
p3/src/: compiler.ml  dune
wykład/: w2.ml
(+648 files in other folders)
