(library
  (name infLib)
  (wrapped false)
  (modules addrVm ast check compiler evalFast evalPrecise evalSpec
           flatVm infLexer infLib infParser))

(executable
  (name inf)
  (modes byte exe)
  (public_name inf)
  (libraries infLib)
  (modules inf))

(menhir (modules infParser))
(ocamllex infLexer)
